@@ -11,6 +11,7 @@ import dev.langchain4j.model.openaiofficial.OpenAiOfficialEmbeddingModel;
 import dev.langchain4j.model.output.Response;
 import dev.langchain4j.model.output.TokenUsage;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.condition.EnabledIfEnvironmentVariable;
@@ -81,7 +82,7 @@ class MicrosoftFoundryEmbeddingModelIT {
 
         List<TextSegment> segments = Stream.generate(() -> TextSegment.from("hello"))
                 .limit(totalSegmentsToEmbed)
-                .toList();
+                .collect(Collectors.toList());
 
         // when
         Response<List<Embedding>> response = model.embedAll(segments);
