@@ -10,6 +10,7 @@ import dev.langchain4j.model.openaiofficial.OpenAiOfficialEmbeddingModel;
 import dev.langchain4j.model.openaiofficial.OpenAiOfficialImageModel;
 import dev.langchain4j.model.openaiofficial.OpenAiOfficialStreamingChatModel;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import org.slf4j.Logger;
@@ -68,7 +69,7 @@ public class InternalOpenAiOfficialTestHelper {
                     .baseUrl(System.getenv("OPENAI_BASE_URL"))
                     .apiKey(System.getenv("OPENAI_API_KEY"))
                     .modelName(CHAT_MODEL_NAME)
-                    .supportedCapabilities(Set.of(RESPONSE_FORMAT_JSON_SCHEMA))
+                    .supportedCapabilities(Collections.singleton(RESPONSE_FORMAT_JSON_SCHEMA))
                     .strictJsonSchema(false)
                     .build();
 
@@ -76,7 +77,7 @@ public class InternalOpenAiOfficialTestHelper {
                     .baseUrl(System.getenv("OPENAI_BASE_URL"))
                     .apiKey(System.getenv("OPENAI_API_KEY"))
                     .modelName(CHAT_MODEL_NAME)
-                    .supportedCapabilities(Set.of(RESPONSE_FORMAT_JSON_SCHEMA))
+                    .supportedCapabilities(Collections.singleton(RESPONSE_FORMAT_JSON_SCHEMA))
                     .strictJsonSchema(true)
                     .build();
 
