@@ -7,6 +7,7 @@ import dev.langchain4j.model.output.TokenUsage;
 import dev.langchain4j.service.common.AbstractAiServiceIT;
 import org.junit.jupiter.api.condition.EnabledIfEnvironmentVariable;
 
+import java.util.Collections;
 import java.util.List;
 
 @EnabledIfEnvironmentVariable(named = "OPENAI_API_KEY", matches = ".+")
@@ -20,7 +21,7 @@ class OpenAiOfficialResponsesAiServiceIT extends AbstractAiServiceIT {
                 .modelName("gpt-5.4-mini")
                 .build();
 
-        return List.of(model);
+        return Collections.singletonList(model);
     }
 
     @Override
