@@ -9,6 +9,7 @@ import dev.langchain4j.model.openaiofficial.OpenAiOfficialResponsesStreamingChat
 import dev.langchain4j.service.common.AbstractAiServiceWithJsonSchemaIT;
 import org.junit.jupiter.api.condition.EnabledIfEnvironmentVariable;
 
+import java.util.Arrays;
 import java.util.List;
 
 @EnabledIfEnvironmentVariable(named = "OPENAI_API_KEY", matches = ".+")
@@ -16,7 +17,7 @@ class OpenAiOfficialResponsesAiServicesWithJsonSchemaIT extends AbstractAiServic
 
     @Override
     protected List<ChatModel> models() {
-        return List.of(
+        return Arrays.asList(
                 syncModel(true),
                 syncModel(false),
                 streamingModel(true),
@@ -52,7 +53,7 @@ class OpenAiOfficialResponsesAiServicesWithJsonSchemaIT extends AbstractAiServic
 
     @Override
     protected boolean isStrictJsonSchemaEnabled(ChatModel model) {
-        return model.defaultRequestParameters() instanceof OpenAiOfficialResponsesChatRequestParameters parameters
-                && Boolean.TRUE.equals(parameters.strictJsonSchema());
+        return model.defaultRequestParameters() instanceof OpenAiOfficialResponsesChatRequestParameters
+                && Boolean.TRUE.equals(((OpenAiOfficialResponsesChatRequestParameters) model.defaultRequestParameters()).strictJsonSchema());
     }
 }
