@@ -22,11 +22,11 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.condition.EnabledIfEnvironmentVariable;
 import org.mockito.InOrder;
 
+import java.util.Collections;
 import java.util.List;
 
 import static com.openai.client.okhttp.OkHttpClient.*;
 import static dev.langchain4j.MockitoUtils.ignoreInteractions;
-import static java.util.List.of;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.atLeastOnce;
@@ -80,7 +80,7 @@ class OpenAiOfficialResponsesStreamingChatModelThinkingIT {
 
         // when
         TestStreamingChatResponseHandler spyHandler = spy(new TestStreamingChatResponseHandler());
-        model.chat(of(userMessage), spyHandler);
+        model.chat(Collections.singletonList(userMessage), spyHandler);
 
         // then
         ChatResponse chatResponse = spyHandler.get();
@@ -121,7 +121,7 @@ class OpenAiOfficialResponsesStreamingChatModelThinkingIT {
 
         // when
         TestStreamingChatResponseHandler spyHandler = spy(new TestStreamingChatResponseHandler());
-        model.chat(of(userMessage), spyHandler);
+        model.chat(Collections.singletonList(userMessage), spyHandler);
 
         // then
         ChatResponse chatResponse = spyHandler.get();
@@ -137,7 +137,7 @@ class OpenAiOfficialResponsesStreamingChatModelThinkingIT {
     void should_return_encrypted_reasoning_and_send_it_back__single_tool_call() {
 
         // given
-        List<String> include = List.of("reasoning.encrypted_content");
+        List<String> include = Collections.singletonList("reasoning.encrypted_content");
 
         OpenAiOfficialSpyingHttpClient spyingHttpClient = new OpenAiOfficialSpyingHttpClient(builder().build());
 
@@ -199,7 +199,7 @@ class OpenAiOfficialResponsesStreamingChatModelThinkingIT {
     void should_return_encrypted_reasoning_and_send_it_back__two_parallel_tool_calls() {
 
         // given
-        List<String> include = List.of("reasoning.encrypted_content");
+        List<String> include = Collections.singletonList("reasoning.encrypted_content");
 
         OpenAiOfficialSpyingHttpClient spyingHttpClient = new OpenAiOfficialSpyingHttpClient(builder().build());
 
